--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img id="yoshi" src="/assets/img/yoshi.jpg" alt="">
+                <img id="yoshi" src="./assets/img/yoshi.jpg" alt="">
             </div>
             <h1>Yoshi Nunura</h1>
             <h2>Desarrolladora <br> Full Stack Java</h2>
             <div class="redes">
                 <a href="https://github.com/yoshi-ng" >
-                    <img src="/assets/img/github.ico" alt="">
+                    <img src="./assets/img/github.ico" alt="">
                 </a>
                 <a href="https://www.linkedin.com/feed/">
-                    <img src="/assets/img/in.ico" alt="">
+                    <img src="./assets/img/in.ico" alt="">
                 </a>
                 
             </div>
@@ -221,6 +221,7 @@
 
 <!-- seccion proyectos -->
     <section class="seccion-proyectos">
+
         <div class="proyectoF">
         <h2 class="text-center">PROYECTOS</h2>
         <div class="proyectos-container pb-5 ">
@@ -229,7 +230,7 @@
                 <div class="row">
                     <div class="col-md-6  col-lg-6 mb-4 d-flex justify-content-center">
                         <article class="position-relative card">
-                            <div class="bg-image sizeimg" style="background-image: url('/assets/img/landingpage.png');">
+                            <div class="bg-image sizeimg" style="background-image: url('./assets/img/landingpage.png');">
                                 <div class="overlay text-center">
                                     <h4>Lanidng Page</h4>
                                     <p><small>Recreación de una landing encontrada para poder poner en conocimientos, fue por iniciativa propia.</small></p>
@@ -239,7 +240,8 @@
                         </article>
                     </div>
                     <div class="col-md-6  col-lg-6 mb-4 d-flex justify-content-center">
-                        <article class="position-relative card">                            <div class="bg-image" style="background-image: url('/assets/img/landingaerovia.png');">
+                        <article class="position-relative card">                            
+                            <div class="bg-image" style="background-image: url('./assets/img/landingaerovia.png');">
                                 <div class="overlay text-center">
                                     <h4>Aerolina Xpress</h4>
                                     <p><small>Actividad realizada dentro del bootcamp, también uso de boostrap, formularios para reserva de vuelos entre otros.</small></p>
@@ -339,14 +341,14 @@
     <!-- FOOTER -->
     <footer>
         <a href="#inicio" class="arriba">
-            <img src="/assets/img/flecha-arriba.ico" alt="">
+            <img src="./assets/img/flecha-arriba.ico" alt="">
         </a>
         <div class="redes">
             <a href="https://github.com/yoshi-ng" >
-                <img src="/assets/img/github.ico" alt="">
+                <img src="./assets/img/github.ico" alt="">
             </a>
             <a href="https://www.linkedin.com/feed/">
-                <img src="/assets/img/in.ico" alt="">
+                <img src="./assets/img/in.ico" alt="">
             </a>
         </div>
     </footer>
@@ -355,6 +357,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 
 </html>
